# taskflow

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
database/: database.py  redis_db.py
models/: __init__.py  leader.py  task.py  user.py
routers/: leaders.py  users.py
schemas/: leader.py  task.py  user.py
test/: test_main.py
tools/: authentication.py  helper.py  password.py
