[project]
name = "task-management"
version = "0.1.0"
description = "basic task management application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "psycopg>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]
